envoi mail avec nodemailer WIP

--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mailer": "^0.3.1",
+    "mongodb": "^3.5.3",
     "mongoose": "^5.9.1",
-    "mongodb": "^3.5.3"
+    "nodemailer": "^6.4.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Pascal - Virginie - Guillaume - Cecile",
   "license": "ISC"
